# clipbirdesk

./: .clang-format  .editorconfig  .gitignore  APPUUID.txt  CMakeLists.txt  CMakePresets.json  CNAME  LICENSE  NOTICE  README.md  asset-manifest.json  index.html  main.cpp  setup.iss
.setup/: .gitignore
src/: CMakeLists.txt  application.cpp  application.hpp  application_factory.cpp  application_factory.hpp  application_state.cpp  application_state.hpp  application_state_qsettings.cpp  application_state_qsettings.hpp  eventfilter.cpp  eventfilter.hpp  main.cpp
src/assets/: resources.qrc  windows.rc
src/assets/styles/: dark.qss  light.qss
src/clipboard/: application_clipboard_factory.cpp  application_clipboard_factory.hpp  applicationclipboard.cpp  applicationclipboard.hpp  clipboard.cpp  clipboard.hpp  clipboard_controller.cpp  clipboard_controller.hpp  platformclipboard.cpp  platformclipboard.hpp  qtclipboard.cpp  qtclipboard.hpp  waylandclipboard.cpp  waylandclipboard.hpp
src/clipboard/controller/: clipboard_controller.cpp  clipboard_controller.hpp
src/common/nlohmann/: adl_serializer.hpp
src/common/trust/: trusted_client.hpp  trusted_clients.cpp  trusted_clients.hpp  trusted_clients_factory.cpp  trusted_clients_factory.hpp  trusted_clients_qsettings.cpp  trusted_clients_qsettings.hpp  trusted_server.hpp  trusted_servers.cpp  trusted_servers.hpp  trusted_servers_factory.cpp  trusted_servers_factory.hpp  trusted_servers_qsettings.cpp  trusted_servers_qsettings.hpp
src/common/types/encrypted_bytes/: encrypted_bytes.hpp
src/common/types/enums/: enums.hpp
src/common/types/exceptions/: exceptions.cpp  exceptions.hpp
src/common/types/ssl_config/: ssl_config.hpp  ssl_config_factory.cpp  ssl_config_factory.hpp
src/config/: config.hpp.in
src/constants/: constants.cpp  constants.hpp
src/controller/: controller.cpp  controller.hpp
src/controller/clipbird/: clipbird.cpp  clipbird.hpp
src/controller/clipboard/: clipboard_controller.hpp
src/controller/history/: history_controller.cpp
src/controller/lan/: lan_controller.cpp
src/controller/wan/: wan_controller.hpp
src/history/: clipboard_history.cpp  clipboard_history.hpp  clipboard_history_factory.cpp  clipboard_history_factory.hpp  history_controller.cpp  history_controller.hpp
src/history/controller/: history_controller.cpp  history_controller.hpp
src/mdns/: browser.cpp  browser.hpp  mdns.hpp  register.cpp  register.hpp
src/mdns/browser/: browser.cpp  browser.hpp
src/mdns/dnssd_browser/: dnssd_browser.cpp  dnssd_browser.hpp
src/mdns/dnssd_register/: dnssd_register.cpp  dnssd_register.hpp
src/mdns/register/: register.cpp  register.hpp
src/network/packets/authentication/: authentication.cpp  authentication.hpp
src/network/packets/invalidrequest/: invalidrequest.cpp  invalidrequest.hpp
src/network/packets/pingpacket/: pingpacket.cpp
src/network/service/: service.hpp
src/packets/: network_packet.hpp  packet_type.hpp
src/packets/authentication/: authentication.cpp  authentication.hpp
src/packets/certificate_exchange_packet/: certificate_exchange_packet.cpp  certificate_exchange_packet.hpp
src/packets/invalidrequest/: invalid_request_exception.hpp  invalidrequest.cpp  invalidrequest.hpp
src/packets/pingpacket/: pingpacket.hpp
src/packets/pingpongpacket/: pingpongpacket.cpp  pingpongpacket.hpp
src/packets/syncingpacket/: syncingpacket.cpp  syncingpacket.hpp
src/protocols/: wlr-data-control-unstable-v1.xml
src/service/: clipbird_service.cpp  clipbird_service.hpp  clipbird_service_factory.cpp  clipbird_service_factory.hpp
src/store/: read_auth_token_dto_job.cpp  read_auth_token_dto_job.hpp  read_hub_host_device_job.cpp  read_hub_host_device_job.hpp  secure_storage.cpp  secure_storage.hpp  storage.cpp  storage.hpp
src/syncing/: client_server.cpp  client_server.hpp  client_server_browser.cpp  client_server_browser.hpp  client_server_browser_factory.hpp  client_server_event_handler.cpp  client_server_event_handler.hpp  server.cpp  server.hpp  server_factory.hpp  session.cpp  session.hpp  synchronizer.cpp  synchronizer.hpp
src/syncing/bluetooth/: bt_browser.cpp  bt_browser.hpp  bt_client_server.cpp  bt_client_server.hpp  bt_client_server_browser.cpp  bt_client_server_browser.hpp  bt_client_server_session.cpp  bt_client_server_session.hpp  bt_constants.hpp  bt_device_browser.cpp  bt_device_browser.hpp  bt_device_connection_browser.cpp  bt_device_connection_browser.hpp  bt_resolved_device.hpp  bt_sdp_browser.cpp  bt_sdp_browser.hpp  bt_server.cpp  bt_server.hpp  bt_server_client_session.cpp  bt_server_client_session.hpp
src/syncing/client/: client.cpp  client.hpp
src/syncing/lan/: lan_controller.cpp  lan_controller.hpp
src/syncing/manager/: client_manager.cpp  client_manager.hpp  host_manager.cpp  host_manager.hpp  server_manager.cpp  server_manager.hpp  syncing_manager.cpp  syncing_manager.hpp  syncing_manager_factory.cpp  syncing_manager_factory.hpp
src/syncing/network/: net_browser.cpp  net_browser.hpp  net_client_server.cpp  net_client_server.hpp  net_client_server_browser.cpp  net_client_server_browser.hpp  net_client_server_session.cpp  net_client_server_session.hpp  net_mdns.hpp  net_register.cpp  net_register.hpp  net_resolved_device.hpp  net_server.cpp  net_server.hpp  net_server_client_session.cpp  net_server_client_session.hpp
src/syncing/server/: server.cpp  server.hpp
src/syncing/wan/: wan_controller.cpp  wan_controller.hpp  wan_service.cpp  wan_service.hpp  wan_ui_controller.cpp  wan_ui_controller.hpp  wan_view_model.cpp  wan_view_model.hpp
src/types/: device.cpp  device.hpp  encrypted_bytes.hpp
src/types/device/: device.cpp  device.hpp
src/types/enums/: enums.hpp
src/types/except/: except.cpp  except.hpp
src/utility/appeventfilter/: appeventfilter.cpp  appeventfilter.hpp
src/utility/logging/: logging.cpp  logging.hpp
src/utility/powerhandler/: powerhandler.cpp  powerhandler.hpp
test/: CMakeLists.txt  test.cpp
test/packets/: authentication.hpp  certificate_exchange_packet.hpp  invalidrequest.hpp  pingpongpacket.hpp  syncingpacket.hpp
(+645 files in other folders)
